[tool.poetry]
name = "youtube-playlist-to-mp3"
version = "0.1.0"
description = "Download YouTube playlists and convert them to MP3 files"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2024.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

